--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ footer-links:
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: 
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  stackoverflow: users/1068497/swang
 
 # Your disqus shortname, entering this will enable commenting on posts
 disqus: 
