--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,12 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:title/
+markdown: kramdown
+highlighter: pygments
+permalink: pretty
+
+kramdown:
+  input: GFM
 
 # The release of Jekyll Now that you're using
 version: v1.0.0
