fixed linkedin and github link

--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email: uniwangshan@gmail.com
   facebook: 
   flickr: 
-  github: https://github.com/wangshan
+  github: wangshan
   instagram: 
-  linkedin: uk.linkedin.com/in/wangshan
+  linkedin: wangshan
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: 
