--- a/_config.yml
+++ b/_config.yml
@@ -49,11 +49,14 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-markdown: kramdown
+markdown: redcarpet
 highlighter: pygments
 permalink: /:title/
 
 kramdown:
+  input: GFM
+  
+redcarpet:
   input: GFM
 
 # The release of Jekyll Now that you're using
