--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Shan Wang
 
 # Short bio or description (displayed in the header)
-description: Software Developer In Training
+description: Tech Cofounder In Training
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/1017605?v=3&s=140
