--- a/_config.yml
+++ b/_config.yml
@@ -30,14 +30,14 @@ footer-links:
   stackoverflow: users/1068497/swang
 
 # Your disqus shortname, entering this will enable commenting on posts
-disqus: 
+disqus: wangshangithubio
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: UA-43048816-2
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: 
+url: https://github.com/wangshan
 
 # If you're hosting your site at a Project repository on GitHub pages 
 # (http://yourusername.github.io/repository-name)
